--- a/src/app/about/About.module.scss
+++ b/src/app/about/About.module.scss
@@ -1,4 +1,3 @@
-// src/app/about/About.module.scss
 @import '../../styles/abstracts/variables';
 
 .aboutPage {
@@ -78,3 +77,4 @@
       flex-shrink: 0;
     }
   }
+}
