--- a/src/app/fleet/Fleet.module.scss
+++ b/src/app/fleet/Fleet.module.scss
@@ -4,6 +4,13 @@
   text-align: center;
   margin-bottom: 3rem;
 
+  .mainHeading {
+    color: $color-light;
+    font-size: 4rem;
+    font-weight: 700;
+    margin-bottom: 1.5rem;
+  }
+
   p {
     font-size: 1.8rem;
     color: rgba($color-light, 0.8);
@@ -16,5 +23,4 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
   gap: 2.5rem;
-
 }
