--- a/src/app/services/Services.module.scss
+++ b/src/app/services/Services.module.scss
@@ -1,3 +1,5 @@
+// src/app/services/Services.module.scss
+
 @import '../../styles/abstracts/variables';
 
 .servicesContainer {
@@ -14,16 +16,6 @@
 .intro {
   font-size: 1.8rem;
   color: rgba($color-light, 0.8);
-  max-width: 800px;
-  margin: 0 auto 2rem auto;
-
-.servicesContainer {
-  text-align: center;
-}
-
-.intro {
-  font-size: 1.8rem;
-  color: rgba(255, 255, 255, 0.8);
   max-width: 800px;
   margin: 0 auto 2rem auto;
 }
