--- a/src/components/layout/Footer.module.scss
+++ b/src/components/layout/Footer.module.scss
@@ -1,3 +1,5 @@
+// src/components/layout/Footer.module.scss
+
 @import '../../styles/abstracts/variables';
 
 .footer {
@@ -14,7 +16,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 3rem;
-  
+
   h4 {
     color: $color-light;
     margin-bottom: 1.5rem;
@@ -25,7 +27,7 @@
     font-size: 1.4rem;
     line-height: 1.8;
   }
-  
+
   a {
     color: #a9b4c2;
     text-decoration: none;
@@ -61,3 +63,4 @@
   &:hover {
     text-decoration: underline;
   }
+}
