--- a/src/components/layout/Header.module.scss
+++ b/src/components/layout/Header.module.scss
@@ -1,3 +1,5 @@
+// src/components/layout/Header.module.scss
+
 @import '../../styles/abstracts/variables';
 
 .header {
@@ -103,10 +105,11 @@
     background: rgba($color-primary, 0.95);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
-    
+
     a {
       font-size: 2.5rem;
       color: $color-light;
       text-decoration: none;
     }
   }
+}
