--- a/src/components/ui/GlobalBackground.module.scss
+++ b/src/components/ui/GlobalBackground.module.scss
@@ -27,4 +27,5 @@
   width: 100%;
   height: 100%;
   // Dark overlay to ensure text is always readable
-  background-color: rgba(4, 30, 66, 0.7); 
+  background-color: rgba(4, 30, 66, 0.7);
+}
