--- a/src/components/ui/BackToTop.module.scss
+++ b/src/components/ui/BackToTop.module.scss
@@ -1,3 +1,5 @@
+// src/components/ui/BackToTop.module.scss
+
 @import '../../styles/abstracts/variables';
 
 .backToTopButton {
@@ -21,4 +23,4 @@
   &:hover {
     transform: scale(1.1);
   }
-
+}
